# research-graph

./: .env.example  .gitignore  pyproject.toml
docs/: graph-architecture.md  state-architecture.md
src/researchgraph/: cli.py  config.py
src/researchgraph/agents/: __init__.py  citation.py  critic.py  dataset.py  literature.py  planner.py  reflection.py  report_writer.py  repository.py  synthesizer.py
src/researchgraph/agents/prompts/: planner.md
src/researchgraph/graph/: __init__.py  builder.py  reducers.py  routing.py  runner.py  state.py
src/researchgraph/llm/: __init__.py  model_router.py  openrouter_client.py  structured_output.py
src/researchgraph/memory/: __init__.py  artifact_store.py  run_store.py
src/researchgraph/reporting/: __init__.py  docx_renderer.py  exporter.py  html_renderer.py  pdf_renderer.py
src/researchgraph/tools/: __init__.py  citation_tools.py  dataset_sources.py  literature_sources.py  repository_sources.py  web_fetch.py
src/researchgraph/utils/: __init__.py  dates.py  ids.py  json.py
tests/integration/: test_export_pipeline.py  test_graph_happy_path.py  test_reflection_loop.py
tests/unit/: test_artifacts.py  test_budget.py  test_citations.py  test_cli.py  test_config.py  test_planner.py  test_reducers.py  test_routing.py  test_synthesizer.py
