[project]
name = "researchgraph"
version = "0.1.0"
description = "Multi-Agent Deep Research system using LangGraph and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "jinja2",
  "langchain-core",
  "langgraph",
  "markdown-it-py",
  "mdit-py-plugins",
  "openai",
  "pydantic",
  "pydantic-settings",
  "pypandoc",
  "python-docx",
  "python-dotenv",
  "rich",
  "tenacity",
  "typer",
  "uvicorn[standard]",
]

[project.scripts]
researchgraph = "researchgraph.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
mypy_path = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
